--- a/examples/input/Cargo.toml
+++ b/examples/input/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "raw_mode"
+name = "input"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zui = { path = "../.." }
-bstr = "0.2"
