--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "libzui"
-version = "0.0.3"
+name = "zui-core"
+version = "0.0.1"
 repository = "https://git.dumrich.com/zui/"
 edition = "2018"
 description = "A Terminal UI Library, Written in Rust"
