--- a/examples/input/Cargo.toml
+++ b/examples/input/Cargo.toml
@@ -6,9 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libzui = { path = "../.." }
-
-[profile.release]
-opt-level="z"
-lto=true
-codegen-units = 1
+zui-core = "0.0.1"
