--- a/examples/raw_mode/Cargo.toml
+++ b/examples/raw_mode/Cargo.toml
@@ -6,5 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libzui = { path = "../.." }
-bstr = "0.2"
+zui-core = { path = "../.." }
