--- a/examples/input/Cargo.toml
+++ b/examples/input/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zui-core = "0.0.1"
+zui-core = { path = "../.."}
